osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_generic_fn_must_be_assigned.txt
error: `EntityJson(...)` returns a dynamic result, and thus must be assigned to a variable with a type annotation
--> main.sml:1:7
     |
   1 | Foo = [EntityJson(type='User', path='$.foo')]
     |        ^ assign it to a variable before using it:
              | `SomeVariable: Entity[str] = EntityJson(type='User', path='$.foo')`
              | `Foo = [SomeVariable]`